# KeysTracker

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  commands.txt  extract-frame.sh  extract-h264-stream.sh
include/: Application.h  ArgumentParser.h  ColorFrameProcessor.h  Decoder.h  FallingNotesTracker.h  FrameProcessor.h  H264Decoder.h  Keyboard.h  KeyboardInfo.h  KeyboardNotesColors.h  KeyboardTracker.h  ManagedMidiFile.h  OverlappingNotesStrategy.h  PPMImageDecoder.h  PixelLine.h  ProgramOptions.h  RGBColor.h  RawFrame.h  RawPPMImageProcessor.h  SimpleNotesStrategy.h  SpacedNotesStrategy.h  Tracker.h  TrackingPointStrategy.h  Utils.h
src/: Application.cpp  ArgumentParser.cpp  CMakeLists.txt  ColorFrameProcessor.cpp  FallingNotesTracker.cpp  H264Decoder.cpp  Keyboard.cpp  KeyboardInfo.cpp  KeyboardNotesColors.cpp  KeyboardTracker.cpp  ManagedMidiFile.cpp  OverlappingNotesStrategy.cpp  PPMImageDecoder.cpp  PixelLine.cpp  ProgramOptions.cpp  RGBColor.cpp  RawFrame.cpp  RawPPMImageProcessor.cpp  SimpleNotesStrategy.cpp  SpacedNotesStrategy.cpp  Tracker.cpp  Utils.cpp  main.cpp
